# embedded-vscode-helloworld-samples

./: README.md
ARM/STM32/STM32F103C8T6/blink/vscode-debug/: libopencm3-examples-rules.mk  sequence
ARM/microbit/microbit_v2/vscode-debug-rust/: Cargo.toml
ARM/microbit/microbit_v2/vscode-debug-rust/src/: main.rs
