[package]
name = "blinky"
version = "0.1.0"
authors = ["Jérôme MEVEL <jeromeevel@hotmail.com>"]
edition = "2021"

[dependencies.microbit-v2]
version = "0.12.0"
git = "https://github.com/nrf-rs/microbit/"
optional = true

[dependencies.microbit]
version = "0.12.0"
git = "https://github.com/nrf-rs/microbit/"
optional = true

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"

[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
